# pipelines

./: box.hpp  pipeline-template_impl.hpp  pipeline.cpp  pipeline.hpp  queue_worker.hpp
examples/: Makefile  test1.cpp
tests/: CMakeLists.txt  README.md
tests/unit/: CMakeLists.txt  test_pipelines.cpp
